Bug 1927063 - [devtools] Fix splitters in High Contrast Mode. r=devtools-reviewers,ochameau
Differential Revision: https://phabricator.services.mozilla.com/D226898

UltraBlame original commit: adfc049a20f051652c9cb7780a1126f36f46895a

--- a/devtools/client/shared/components/splitter/SplitBox.css
+++ b/devtools/client/shared/components/splitter/SplitBox.css
@@ -1,6 +1,6 @@
-
-
-
+/* This Source Code Form is subject to the terms of the Mozilla Public
+ * License, v. 2.0. If a copy of the MPL was not distributed with this
+ * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .split-box {
   display: flex;
@@ -41,9 +41,14 @@
 
   box-sizing: border-box;
 
-  
-
+  /* Positive z-index positions the splitter on top of its siblings and makes
+     it clickable on both sides. */
   z-index: 1;
+
+  /* opt-out of forced colors because the transparent borders are turned into
+     opaque ones in High Contrast Mode. --theme-splitter-color has specific value
+     in High Contrast Mode so we should be fine */
+  forced-color-adjust: none;
 }
 
 .split-box.vert > .splitter {
@@ -59,7 +64,7 @@
 }
 
 .split-box.horz > .splitter {
-  
+  /* Emphasize the horizontal splitter width and color */
   min-height: var(--devtools-emphasized-horizontal-splitter-min-height);
 
   background-color: var(--theme-emphasized-splitter-color);
@@ -73,7 +78,7 @@
   cursor: ns-resize;
 }
 
-
+/* Emphasized splitter has the hover style. */
 .split-box.horz > .splitter:hover {
   background-color: var(--theme-emphasized-splitter-color-hover);
 }
@@ -82,11 +87,11 @@
   pointer-events: none;
 }
 
-
-
-
-
-
+/**
+ * Make sure splitter panels are not processing any mouse
+ * events. This is good for performance during splitter
+ * bar dragging.
+ */
 .split-box.dragging > .controlled,
 .split-box.dragging > .uncontrolled {
   pointer-events: none;
